@@ -120,7 +120,7 @@ bin/retro: ngaImage bin/retro-embedimage bin/retro-extend source/interfaces/retr
 	./bin/retro-extend rre.image source/interfaces/io/filesystem.retro source/interfaces/io/floatingpoint.retro source/interfaces/io/unix.retro source/interfaces/io/rng.retro source/interfaces/io/sockets.retro source/interfaces/retro-unix.retro source/interfaces/io/clock.retro 
 	./bin/retro-embedimage rre.image >source/interfaces/retro-image.c
 	cd source/interfaces && $(CC) $(CFLAGS) $(LDFLAGS) -o ../../bin/retro retro-unix.c $(LIBM)
-	cd package && ../bin/retro -f list
+	cd package && ../bin/retro -f list.forth
 	./bin/retro-embedimage rre.image >source/interfaces/retro-image.c
 	rm rre.image
 	cd source/interfaces && $(CC) $(CFLAGS) $(LDFLAGS) -o ../../bin/retro retro-unix.c $(LIBM)
