@@ -11,10 +11,6 @@ also use any Retro code directly.
 'dict-words-listing.forth include
 ~~~
 
-~~~
-'deprecated-201907.retro include
-~~~
-
 Save the image with anything loaded here added in. The
 `retro` binary will be rebuilt using the extended image.
 
