@@ -2,8 +2,8 @@
 #ifndef CELL
 #define CELL int32_t
 #endif
-CELL ngaImageCells = 16119;
-CELL ngaImage[] = { 1793,15449,16096,16118,202001,0,10,1,10,2,10,3,10,4,10,5,10,6,10,
+CELL ngaImageCells = 16046;
+CELL ngaImage[] = { 1793,15449,16003,16045,202001,0,10,1,10,2,10,3,10,4,10,5,10,6,10,
                        7,10,8,10,9,10,10,10,11,10,12,10,13,10,14,10,15,10,16,10,
                        17,10,18,10,19,10,20,10,21,10,22,10,23,10,24,10,25,10,68223234,1,
                        2575,85000450,1,656912,140,139,268505089,64,63,135205121,64,10,101384453,0,9,10,2049,57,25,459011,
@@ -55,7 +55,7 @@ CELL ngaImage[] = { 1793,15449,16096,16118,202001,0,10,1,10,2,10,3,10,4,10,5,10,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
                        0,0,0,0,0,0,105,109,97,103,101,58,115,97,118,101,0,103,101,0,
-                       108,0,48,55,46,114,101,116,114,111,0,0,79,85,78,68,0,125,126,0,
+                       116,0,110,103,45,119,105,116,104,0,104,0,79,85,78,68,0,125,126,0,
                        72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,0,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
                        0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,
@@ -182,7 +182,7 @@ CELL ngaImage[] = { 1793,15449,16096,16118,202001,0,10,1,10,2,10,3,10,4,10,5,10,
                        2076,4097,3312,10,3480,3538,132,84,101,109,112,83,116,114,105,110,103,115,0,32,
                        3523,3556,132,84,101,109,112,83,116,114,105,110,103,77,97,120,0,512,3539,3568,
                        145,83,84,82,73,78,71,83,0,2049,1543,3841,3538,3841,3556,19,18,10,3557,3588,
-                       132,67,117,114,114,101,110,116,0,10,10,3577,3603,145,115,58,112,111,105,110,
+                       132,67,117,114,114,101,110,116,0,8,10,3577,3603,145,115,58,112,111,105,110,
                        116,101,114,0,3841,3588,3841,3556,19,2049,3568,17,10,3590,3622,145,115,58,110,101,
                        120,116,0,1,3588,2049,3015,3841,3588,3841,3538,11,1793,3638,1,0,4097,3588,10,1,
                        3633,9,10,3557,3652,145,115,58,116,101,109,112,0,2,2049,80,2049,2914,2049,3603,
@@ -805,7 +805,4 @@ CELL ngaImage[] = { 1793,15449,16096,16118,202001,0,10,1,10,2,10,3,10,4,10,5,10,
                        0,2,2049,1847,2049,4662,1793,15992,2049,10296,2049,10270,10,1,15987,1793,15998,3,10,1,
                        15996,2049,65,10,15909,16029,145,100,58,119,111,114,100,115,45,98,101,103,105,110,
                        110,105,110,103,45,119,105,116,104,0,2049,1847,2049,4746,1793,16040,2049,163,2049,15980,
-                       10,1,16035,2049,6977,10,16003,16059,145,117,110,105,120,58,119,114,105,116,101,0,
-                       1793,16065,2,2049,80,10,1,16061,2049,2076,1,12,2049,13484,10,16045,16091,145,117,110,
-                       105,120,58,105,111,58,110,58,112,117,116,0,1,17,2049,13484,10,16074,16113,145,
-                       117,110,105,120,58,105,111,58,115,58,112,117,116,0,1,18,2049,13484,10,0 };
+                       10,1,16035,2049,6977,10,0 };
